past talks can now be seen

--- a/hosted/tmpl/past.html
+++ b/hosted/tmpl/past.html
@@ -1,4 +1,4 @@
-{{define "index"}}
+{{define "past"}}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -21,8 +21,6 @@
                     <p><a class="btn btn-primary btn-lg" href="/propose" role="button">Propose a talk &raquo;</a></p>
                 </div>
             </div>
-
-            {{ template "upcomingTalks" . }}
 
             {{ template "pastTalks" . }}
 
